增加多列下拉 单列下拉 日期控件 的双向数据绑定  和 grid的数据源的wz_init_oid
grid的数据源的wz_init_oid  替换了服务器给的did 这样就不必依赖服务器的数据库访问来创建出oid 了
直接依靠前端的oid就可以实现增删改items的记录了
只要是setData进来的数据 一律加oid 不管是不是数据库查的

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ WhhJSPlatform.iml
 
 target/classes/portal-data-source.xml
 target
-#src/main/resources/proxool.properties
+
+src/main/resources/proxool.properties
