--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -55,4 +55,17 @@
     </listener>
 
 
+
+    <!-- Log4j配置 -->
+    <context-param>
+        <param-name>log4jConfigLocation</param-name>
+        <param-value>classpath:/log4j/log4j.xml</param-value>
+    </context-param>
+    <!-- 加载log4j配置文件 -->
+    <listener>
+        <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
+    </listener>
+
+
+
 </web-app>
