--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,11 @@
         </dependency>
 
 
-
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.9</version>
+        </dependency>
 
     </dependencies>
 </project>
