--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -22,6 +22,10 @@
             <param-name>contextConfigLocation</param-name>
             <param-value>classpath:spring-mvc.xml</param-value>
         </init-param>
+        <!--<init-param>
+            <param-name>detectAllHandlerExceptionResolvers</param-name> 取消其自动注册的异常解析器
+            <param-value>false</param-value>
+        </init-param>-->
         <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping><!-- 我认为 所有的请求的响应都应该是json的-->
@@ -67,5 +71,15 @@
     </listener>
 
 
+    
+    
+    <filter>
+        <filter-name>WhhJSFrameExceptionFilter</filter-name>
+        <filter-class>com.whhercp.jsframe.ExceptionFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>WhhJSFrameExceptionFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
